ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-playground-ing
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: wil-playground.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: wil-playground-svc
            port:
              number: 80
